# vst_tests

./: CMakeLists.txt
include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
resource/: Info.plist
source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp
